[tool.poetry]
name = "phenopackets"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.3.7"

[tool.poetry.dev-dependencies]
linkml = "^1.4.2"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.4"
schemasheets = "^0.1.9"
mkdocs-mermaid2-plugin = "^0.6.0"
jupyter = "^1.0.0"
linkml-renderer = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ingest-constants = "phenopackets.utilities.ingest_constants:ingest"
