[tool.poetry]
name = "phenopackets"
version = "0.1.0"
description = ""
authors = ["cmungall <cjm@berkeleybop.org>"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = ">=1.6.0"
oaklib = "^0.5.20"

[tool.poetry.group.dev.dependencies]
linkml = "^1.7.4"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.4"
mkdocs-mermaid2-plugin = "^0.6.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
p3 = "phenopackets.cli.cli:main"
ingest-constants = "phenopackets.utilities.ingest_constants:ingest"
